--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@textlint/ast-node-types": "^12.0.0",
     "@textlint/get-config-base-dir": "^2.0.0",
     "@textlint/regexp-string-matcher": "^1.1.0",
+    "node-module-polyfill": "^1.0.1",
     "rc-config-loader": "^4.0.0"
   },
   "peerDependencies": {
